--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-slate
 title: Doof's Home
-description: Bookmark this to keep an eye on my project updates!
+description: This is my new project!
+
