--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
-theme: jekyll-theme-minimal
-title: Doof's Home
-description: This is my new project!
+name: Trym's Website
+description: Diverse prosjekter og innhold fra studiet Fysikk og Matematikk, Sivilingeniør.
+title: Tryms Nettside
+markdown: kramdown
+highlighter: rogue
+url: "http://www.trymsaether.github.io"
